--- a/index.html
+++ b/index.html
@@ -6,6 +6,46 @@
     <link rel="stylesheet" href="stylesheet/style.css">
   </head>
   <body>
+    <section class="header_section">
+      <div class="">
+          <h1>Каомодзи — японские смайлики</h1>
+          <p class="little_rose_emoji">\(★ω★)/</p>
+          <p class="little_rose_emoji">(o˘◡˘o)</p>
+
+<div class="div_big_emoji_288">
+  <p class="p_1">o(*°▽°*)o</p>
+</div>
+
+
+
+
+
+      </div>
+      <div class="">
+          <p class="little_rose_emoji">( ˙꒳​˙ )</p>
+          <p class="little_rose_emoji">╰(▔∀▔)╯</p>
+      </div>
+      <div class="">
+          <img class="arrow"src="images/arrow.svg" alt="">
+          <p class="text">Будучи очень эмоциональной и креативной нацией, японцы быстро освоили общение смайликами. Более того, их богатый на визуальные образы язык позволил создать несколько тысяч вариантов своих эмодзи, именуемых каомодзи (расшифровывается как лицо+символ).</p>
+      </div>
+    </section>
+
+      <p class="big_emoji_230">＼(￣▽￣)／</p>
+    <section class="section_2nd">
+      <img class="arrow"src="images/arrow_white.svg" alt="">
+      <p class="text">Главное их отличие от популярных в западной культуре обозначений в том, что схематическое изображение человеческого лица всегда находится в горизонтальной плоскости. Его не нужно мысленно переворачивать на 90 градусов. В остальном же отличия минимальны, разве что японцы не стесняются обильно сдабривать смайлики редко встречающимися знаками.</p>
+      <p class="emoji_x2">)_\<br>0 /</p>
+      <p class="emoji_x2">(o´▽o)</p>
+
+
+<div class="div_big_emoji_288">
+  <p class="p_2">(ﾉ◕ヮ◕)</p>
+</div>
+
+
+      <!-- <p class="big_emoji_288">(ﾉ◕ヮ◕)</p> -->
+    </section>
 
   </body>
 </html>
