--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p class="little_rose_emoji">( ˙꒳​˙ )</p>
           <p class="little_rose_emoji">╰(▔∀▔)╯</p>
       </div>
-      <div class="">
+      <div class="div_arrow_and_text">
           <img class="arrow"src="images/arrow.svg" alt="">
           <p class="text">Будучи очень эмоциональной и креативной нацией, японцы быстро освоили общение смайликами. Более того, их богатый на визуальные образы язык позволил создать несколько тысяч вариантов своих эмодзи, именуемых каомодзи (расшифровывается как лицо+символ).</p>
       </div>
@@ -33,9 +33,11 @@
 
       <p class="big_emoji_230">＼(￣▽￣)／</p>
     <section class="section_2nd">
-      <img class="arrow"src="images/arrow_white.svg" alt="">
-      <p class="text">Главное их отличие от популярных в западной культуре обозначений в том, что схематическое изображение человеческого лица всегда находится в горизонтальной плоскости. Его не нужно мысленно переворачивать на 90 градусов. В остальном же отличия минимальны, разве что японцы не стесняются обильно сдабривать смайлики редко встречающимися знаками.</p>
-      <p class="emoji_x2">)_\<br>0 /</p>
+      <div class="div_arrow_and_text">
+        <img class="arrow"src="images/arrow_white.svg" alt="">
+        <p class="text">Главное их отличие от популярных в западной культуре обозначений в том, что схематическое изображение человеческого лица всегда находится в горизонтальной плоскости. Его не нужно мысленно переворачивать на 90 градусов. В остальном же отличия минимальны, разве что японцы не стесняются обильно сдабривать смайлики редко встречающимися знаками.</p>
+      </div>
+            <p class="emoji_x2">)_\<br>0 /</p>
       <p class="emoji_x2">(o´▽o)</p>
 
 
