--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <p class="little_rose_emoji">\(★ω★)/</p>
           <p class="little_rose_emoji">(o˘◡˘o)</p>
 
-<div class="div_big_emoji_288">
+<div class="div_big_emoji_250">
   <p class="p_1">o(*°▽°*)o</p>
 </div>
 
@@ -37,16 +37,36 @@
         <img class="arrow"src="images/arrow_white.svg" alt="">
         <p class="text">Главное их отличие от популярных в западной культуре обозначений в том, что схематическое изображение человеческого лица всегда находится в горизонтальной плоскости. Его не нужно мысленно переворачивать на 90 градусов. В остальном же отличия минимальны, разве что японцы не стесняются обильно сдабривать смайлики редко встречающимися знаками.</p>
       </div>
-            <p class="emoji_x2">)_\<br>0 /</p>
-      <p class="emoji_x2">(o´▽o)</p>
+        <p class="emoji_x2">)_\<br>0 /</p>
+        <p class="emoji_x2">(o´▽o)</p>
+      <div class="div_big_emoji_250">
+        <p class="p_2">(ﾉ◕ヮ◕)</p>
+      </div>
+        </section>
 
+    <section class="section_3rd">
 
-<div class="div_big_emoji_288">
-  <p class="p_2">(ﾉ◕ヮ◕)</p>
-</div>
+      <div class="div_head_arrow_text">
+        <h2>+ Положительные эмоции</h2>
+        <img class="arrow" src="images/arrow_rose.svg" alt="">
+        <p class="text">Смайлики радости – обычно отличаются высоко посаженными глазами, улыбчивым ртом и поднятыми кверху руками-палочками. В качестве рта могут использоваться самые разные символы, от обычной точки до букв греческого алфавита. Многими японками для рта используется буква ω (омега), напоминающая сложенные бантиком губы. Так, по их мнению, смайлик становится более милым, «кавайным».</p>
+      </div>
+      <p class="emoji_blue_85">(o´▽o) (-‿‿-) ヽ(>∀<☆)</p>
+        </section>
 
+    <section class="section_4th">
+      <h2><3 Влюблённость</h2>
+        <p class="emoji_translate">Σ>―(〃°ω°〃)♡→</p>
+        <p class="p_emoji_translate">«я влюбился»</p>
+        <p class="emoji_translate">(˘▽˘>ԅ( ˘⌣˘) </p>
+        <p class="p_emoji_translate">«влюблённые держатся за руки»</p>
+        <p class="emoji_translate">☆⌒ヽ(*’､^*)chu</p>
+        <p class="p_emoji_translate">«чмоки-чмоки»</p>
+        </section>
 
-      <!-- <p class="big_emoji_288">(ﾉ◕ヮ◕)</p> -->
+    <section class="section_5th">
+      <h2>/// Смущение</h2>
+      <div class="div_big_emoji_250"><p class="p_3">(ノ*°▽°*)</p></div>
     </section>
 
   </body>
